@@ -23,21 +23,23 @@ Homepage: http://www.kde.org/
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/kdebase-runtime.git
 Vcs-Git: git://git.debian.org/pkg-kde/kde-sc/kdebase-runtime.git
 
-Package: kdebase-runtime
+Package: kde-runtime
 Section: kde
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends},
- kdebase-runtime-data (>= ${source:Version}), ${sameVersionDep:kdelibs5-plugins:kdebase-runtime},
+ kde-runtime-data (>= ${source:Version}), ${sameVersionDep:kdelibs5-plugins:kde-runtime},
  oxygen-icon-theme (>= 4:4.6),
  shared-desktop-ontologies, plasma-scriptengine-javascript (= ${binary:Version})
 Recommends: virtuoso-minimal
 Suggests: djvulibre-bin, icoutils, finger
 Replaces: kdebase-runtime-bin-kde4,
  kdelibs5-plugins (<< 4:4.5), kdebase-workspace-bin (<< 4:4.6),
- kdebluetooth (<< 1.0~beta7-1), plasma-netbook (<< 4:4.5.95)
+ kdebluetooth (<< 1.0~beta7-1), plasma-netbook (<< 4:4.5.95),
+ kdebase-runtime (<< 4:4.7.2)
 Breaks: kdebase-runtime-bin-kde4,
  kdelibs5-plugins (<< 4:4.5), kdebase-workspace-bin (<< 4:4.6),
- kdebluetooth (<< 1.0~beta7-1), plasma-netbook (<< 4:4.5.95)
+ kdebluetooth (<< 1.0~beta7-1), plasma-netbook (<< 4:4.5.95),
+ kdebase-runtime (<< 4:4.7.2)
 Conflicts: kdelibs4-dev
 Description: runtime components from the official KDE release
  KDE is produced by an international technology team that creates free and open
@@ -49,16 +51,33 @@ Description: runtime components from the official KDE release
  .
  This package contains programs and data needed at runtime by KDE applications.
 
-Package: kdebase-runtime-data
+Package: kdebase-runtime
+Section: kde
+Architecture: all
+Depends: ${misc:Depends}, kde-runtime
+Description: Transitional package for the KDE runtime components
+ KDE is produced by an international technology team that creates free and open
+ source software for desktop and portable computing. Among KDE's products are a
+ modern desktop system for Linux and UNIX platforms, comprehensive office
+ productivity and groupware suites and hundreds of software titles in many
+ categories including Internet and web applications, multimedia, entertainment,
+ educational, graphics and software development.
+ .
+ This transitional package takes care of pulling in the new kde-runtime package
+ and can safely be removed after installation.
+
+Package: kde-runtime-data
 Section: kde
 Architecture: all
 Depends: ${perl:Depends}, ${misc:Depends}
 Replaces: kdebase-bin-kde3, kcontrol, kdebase-kio-plugins, kdebase-runtime-data-common,
  kdelibs5-data (<< 4:4.5), kdebase-workspace-bin (<< 4:4.5.95), plasma-netbook (<< 4:4.5.95),
- plasma-widget-networkmanagement (<< 0.1+git20110422.810bc16-1+)
+ plasma-widget-networkmanagement (<< 0.1+git20110422.810bc16-1+),
+ kdebase-runtime-data (<< 4:4.7.2)
 Breaks: kdebase-bin-kde3, kcontrol, kdebase-kio-plugins, kdebase-runtime-data-common,
  kdelibs5-data (<< 4:4.5), kdebase-workspace-bin (<< 4:4.5.95), plasma-netbook (<< 4:4.5.95),
- plasma-widget-networkmanagement (<< 0.1+git20110422.810bc16-1+)
+ plasma-widget-networkmanagement (<< 0.1+git20110422.810bc16-1+),
+ kdebase-runtime-data (<< 4:4.7.2)
 Description: shared data files for the KDE base runtime module
  This package contains the architecture-independent shared data files needed to
  run KDE applications.
@@ -100,15 +119,26 @@ Description: JavaScript script engine for Plasma
  .
  This package is part of the KDE base runtime module.
 
-Package: kdebase-runtime-dbg
+Package: kde-runtime-dbg
 Section: debug
 Architecture: any
 Priority: extra
-Depends: ${misc:Depends}, kdebase-runtime (= ${binary:Version}), kdelibs5-dbg
-Replaces: kdelibs5-dbg (<< 4:4.5), kdebase-workspace-dbg (<< 4:4.6)
-Breaks: kdelibs5-dbg (<< 4:4.5), kdebase-workspace-dbg (<< 4:4.6)
+Depends: ${misc:Depends}, kde-runtime (= ${binary:Version}), kdelibs5-dbg
+Replaces: kdelibs5-dbg (<< 4:4.5), kdebase-workspace-dbg (<< 4:4.6),
+ kdebase-runtime-dbg (<< 4:4.7.2)
+Breaks: kdelibs5-dbg (<< 4:4.5), kdebase-workspace-dbg (<< 4:4.6),
+ kdebase-runtime-dbg (<< 4:4.7.2)
 Conflicts: kdelibs-dbg
 Description: debugging symbols for KDE base runtime module
  This package contains the debugging symbols associated with kdebase-runtime.
  They will automatically be used by gdb for debugging kdebase-runtime related
  issues.
+
+Package: kdebase-runtime-dbg
+Section: debug
+Architecture: any
+Priority: extra
+Depends: ${misc:Depends}, kde-runtime-dbg
+Description: transitional package for kde-runtime-dbg
+ This is a dummy transitional package for kde-runtime-dbg and can be safely
+ removed after the installation is complete.
