@@ -1,0 +1,6 @@
+kde-runtime: package-name-doesnt-match-sonames
+kde-runtime: setgid-binary usr/lib/kde4/libexec/kdesud 2755 root/nogroup
+kde-runtime: desktop-command-not-in-package usr/share/applications/kde4/knetattach.desktop knetattach
+kde-runtime: shlib-without-versioned-soname usr/lib/attica_kde.so attica_kde.so
+kde-runtime: shlib-without-versioned-soname usr/lib/libknotifyplugin.so libknotifyplugin.so
+kde-runtime: shlib-without-versioned-soname usr/lib/libnepomukcommon.so libnepomukcommon.so
