@@ -1,2 +1,0 @@
-kdebase-runtime-data: desktop-command-not-in-package usr/share/applications/kde4/nepomukbackup.desktop nepomukbackup
-kdebase-runtime-data: unknown-locale-code currency
